--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>
+    <title>rat care masterlist</title>
     <link rel="stylesheet" href="wiki.css">
   </head>
     
