--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
   <body>
 <div class="sidenav">
-  <a href="index">home</a>
+  <img src="http://www.mazeguy.net/office/pushpin.gif"><a href="index">home</a>
   <a href="diet">food + nutrition</a>
   <a href="housing">cage + homing</a>
   <a href="health">health + disease</a>
