--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"></a><a href="index">home</a>
   <a href="diet">food + nutrition</a>
   <a href="housing">cage + homing</a>
-  <a href="health">health + disease</a>
+  <a href="health"><img src="http://www.mazeguy.net/objects/prescription.gif"></a><a href="health">health + disease</a>
   <a href="enrichment">enrichment</a>
   <a href="behavior">behavior</a>
 </div>
