--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     
   <body>
 <div class="sidenav">
-  <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"></a><a href="index">home</a><br>
-  <a href="diet">food + nutrition</a><br>
-  <a href="housing">cage + homing</a><br>
-  <a href="health"><img src="http://www.mazeguy.net/objects/prescription.gif"></a><a href="health">health + disease</a><br>
-  <a href="enrichment">enrichment</a><br>
-  <a href="behavior">behavior</a><br>
-  <a href="resources">resources</a><br>
+  <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"> home</a>
+  <a href="diet">food + nutrition</a>
+  <a href="housing">cage + homing</a>
+  <a href="health"><img src="http://www.mazeguy.net/objects/prescription.gif"> health + disease</a>
+  <a href="enrichment">enrichment</a>
+  <a href="behavior">behavior</a>
+  <a href="resources">resources</a>
 </div>
   </body>
     
