--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
 <div class="sidenav">
   <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"> home</a>
-  <a href="diet">food + nutrition</a>
-  <a href="housing">cage + homing</a>
+  <a href="diet"><img src="http://www.mazeguy.net/edible/cheese.gif"> food + nutrition</a>
+  <a href="housing"><img src="http://www.mazeguy.net/objects/bone.gif"> cage + homing</a>
   <a href="health"><img src="http://www.mazeguy.net/objects/prescription.gif"> health + disease</a>
-  <a href="enrichment">enrichment</a>
-  <a href="behavior">behavior</a>
-  <a href="resources">resources</a>
+  <a href="enrichment"><img src="http://www.mazeguy.net/objects/palette.gif"> enrichment</a>
+  <a href="behavior"><img src="http://www.mazeguy.net/office/envelope.gif"> behavior</a>
+  <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
 </div>
   </body>
     
