--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div class="sidenav">
   <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"> home</a>
   <a href="diet"><img src="http://www.mazeguy.net/edible/cheese.gif"> food + nutrition</a>
+  <a href="foodlist"><img src="http://www.mazeguy.net/edible/chocolatebar.gif"> food list</a>
   <a href="housing"><img src="http://www.mazeguy.net/objects/bone.gif"> cage + homing</a>
   <a href="health"><img src="http://www.mazeguy.net/objects/prescription.gif"> health + disease</a>
   <a href="enrichment"><img src="http://www.mazeguy.net/objects/palette.gif"> enrichment</a>
