--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <a href="enrichment"><img src="http://www.mazeguy.net/objects/palette.gif"> enrichment</a>
   <a href="behavior"><img src="http://www.mazeguy.net/office/envelope.gif"> behavior</a>
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
+  <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>
   </body>
     
