--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <a href="health"><img src="http://www.mazeguy.net/objects/prescription.gif"> health + disease</a>
   <a href="enrichment"><img src="http://www.mazeguy.net/objects/palette.gif"> enrichment</a>
   <a href="behavior"><img src="http://www.mazeguy.net/office/envelope.gif"> behavior</a>
+  <a href="breeding"><img src="http://www.mazeguy.net/romantic/candyheart.gif"> breeding</a>
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>
