--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </div>
     
     <div class="stuff">
-      <img src="https://i.imgur.com/uH1r1Je.gif" alt="morbid's rat care guide">
+      <img src="https://imgur.com/GbJwx9R" alt="morbid's rat care guide">
     </div>
     
   </body>
