--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>rat care masterlist</title>
     <link rel="stylesheet" href="wiki.css">
+    <link href="/favicon.ico" rel="icon" type="image/x-icon">
       <script type="text/javascript">
 function tb8_makeArray(n){
 this.length = n;
