--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <head>
     <title>rat care masterlist</title>
     <link rel="stylesheet" href="wiki.css">
-    <link href="/favicon.ico" rel="icon" type="image/x-icon">
-      <script type="text/javascript">
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
+    <script type="text/javascript">
 function tb8_makeArray(n){
 this.length = n;
 return this.length;
@@ -43,7 +43,6 @@ tb8_TID = setTimeout("tb8_pisi()", tb8_sp);
 }
 tb8_pisi()
 </script>
- 
   </head>
     
   <body>
@@ -59,8 +58,7 @@ tb8_pisi()
   <a href="breeding"><img src="http://www.mazeguy.net/romantic/candyheart.gif"> breeding</a>
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
-</div>
-    
+</div>  
     <div class="stuff">
       <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
     </div>
