--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>rat care masterlist</title>
     <link rel="stylesheet" href="wiki.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <script type="text/javascript">
 function tb8_makeArray(n){
 this.length = n;
