--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@ tb8_pisi()
 </div>  
     <div class="stuff">
       <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
-    </div>
-    
+      <div class="box">
+                     </div>
+    </div>   
   </body>
     
 </html>
