--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@ tb8_pisi()
     <div class="stuff">
       <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
       <div class="box">
-                     </div>
+        <p> hello! hello hello hello. txt </p>
+    </div>
     </div>   
   </body>
     
