--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>rat care masterlist</title>
     <link rel="stylesheet" href="wiki.css">
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script type="text/javascript">
 function tb8_makeArray(n){
 this.length = n;
@@ -62,7 +62,7 @@ tb8_pisi()
     <div class="stuff">
       <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
       <div class="box">
-        <p> hello! hello hello hello. txt </p>
+        <p>hello! hello hello hello. txt</p>
     </div>
     </div>   
   </body>
