--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ tb8_pisi()
     <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
         <p>hello! hello hello hello. txt</p>
+      <iframe src="https://discord.com/widget?id=788529471043928105&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </div>   
   </body>
     
