--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ tb8_pisi()
     
   <body>
 <div class="sidenav">
-  <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"> home</a>
+  <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"> home<img src="https://imgur.com/ci0w4O6.gif"></a>
   <a href="diet"><img src="http://www.mazeguy.net/edible/cheese.gif"> food + nutrition</a>
   <a href="foodlist"><img src="http://www.mazeguy.net/edible/chocolatebar.gif"> food list</a>
   <a href="housing"><img src="http://www.mazeguy.net/objects/bone.gif"> cage + homing</a>
@@ -61,7 +61,6 @@ tb8_pisi()
     <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
         <p>hello! hello hello hello. txt</p>
-      <iframe src="https://discord.com/widget?id=788529471043928105&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     </div>   
   </body>
     
