--- a/index.html
+++ b/index.html
@@ -59,8 +59,10 @@ tb8_pisi()
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>  
     <div class="stuff">
+      <div class="page">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
         <p>hello! hello hello hello. txt</p>
+      </div>
     </div>   
   </body>
     
