--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ tb8_pisi()
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>  
 
-      <div class="page">
+      <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
         <p>hello! hello hello hello. txt</p>
       </div>
