--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ tb8_pisi()
 
       <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
-        <p>hello! hello hello hello. txt</p>
+        <p style="color:white;font-family:Arial">hello! hello hello hello. txt</p>
       </div>
  
   </body>
