--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@ tb8_pisi()
         <p style="color:white;font-family:Arial">hello! hello hello hello. txt</p>
       </div>
  
+    <div class="sidenbar">
+      <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif">
+    </div>
   </body>
     
 </html>
