--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ this.length = n;
 return this.length;
 }
 tb8_messages = new tb8_makeArray(3);
-tb8_messages[0] = "RAT";
-tb8_messages[1] = "CARE";
-tb8_messages[2] = "MASTERLIST";
+tb8_messages[0] = "RAT CARE";
+tb8_messages[1] = "MASTERLIST";
+tb8_messages[2] = "♡ ♡ ♡";
 tb8_rptType = 'infinite';
 tb8_rptNbr = 5;
 tb8_speed = 100;
