--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@ tb8_pisi()
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>  
+<div class="sidenbar">
+  <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif">
+  <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp">
+</div>
 
       <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
         <p style="color:white;font-family:Arial">hello! hello hello hello. txt</p>
       </div>
- 
-    <div class="sidenbar">
-      <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif">
-    </div>
-  </body>
     
+  </body>
 </html>
