--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@ tb8_pisi()
 <div class="sidenbar">
   <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif"> <br>
   <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp"> <br>
+  <img src="https://i.ibb.co/YD6rHZ6/tumblr-a715d77e59d48068d047aa315c74ee9c-4317d530-250.gif"> <br>
+  <img src="https://i.ibb.co/bK1dK6W/tumblr-8cc68e9d711c282e1fb825acb3c392a1-2df65134-250.webp"> <br>
+  <img src="https://i.ibb.co/HtJB5wZ/tumblr-f4b6d5654f5b00911ba68028ba425fd4-fe016682-250.gif"> <br>
+  <img src="https://i.ibb.co/2SKJ2ZX/tumblr-fd9923a2addfe9a1baf48bf31fe6c07e-6e9a0db3-250.gif"> <br>
 </div>
 
       <div class="stuff">
