--- a/index.html
+++ b/index.html
@@ -58,23 +58,23 @@ tb8_pisi()
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>  
-<div class="sidenbar">
-  <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif"> <br>
-  <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp"> <br>
-  <img src="https://i.ibb.co/YD6rHZ6/tumblr-a715d77e59d48068d047aa315c74ee9c-4317d530-250.gif"> <br>
-  <img src="https://i.ibb.co/bK1dK6W/tumblr-8cc68e9d711c282e1fb825acb3c392a1-2df65134-250.webp"> <br>
-  <img src="https://i.ibb.co/HtJB5wZ/tumblr-f4b6d5654f5b00911ba68028ba425fd4-fe016682-250.gif"> <br>
-  <img src="https://i.ibb.co/2SKJ2ZX/tumblr-fd9923a2addfe9a1baf48bf31fe6c07e-6e9a0db3-250.gif"> <br>
-  <img src="https://i.ibb.co/tmk3TQY/tumblr-bb74dcde3c3143d2ffdffd7bdaba0a34-f00cde6f-250.webp"> <br>
-  <img src="https://i.ibb.co/hm5jzHX/tumblr-e3ca1d1c6cf70bfe846ac9d614913583-a3f6cb76-250.gif"> <br>
-  <img src="https://i.ibb.co/8P2GtVJ/tumblr-2024cc9eedad0af2773e012d4049cb74-2668bfe9-250.gif"> <br>
-  <img src="https://i.ibb.co/VWYCRtV/tumblr-83e1536f228830945568acb8a61fb0ff-860423a5-250.webp"> <br>
-  <img src="https://i.ibb.co/6bTLmJJ/tumblr-0d81ea8177823c5d8dea7e23a7cbe756-54884833-250.webp"> <br>
-  <img src="https://i.ibb.co/Wc9pw0g/tumblr-0ac8d42d14c2caf2a3880d241ba5f06e-b07ed936-250.gif"> <br>
-  <img src="https://i.ibb.co/g4byr9H/tumblr-06d752c4a6fa49f2bab11d8419fdb9ab-69d2ce4b-250.webp"> <br>
-  <img src="https://i.ibb.co/0QdC6ky/tumblr-390e1cadbf4214d569c5210b7defc342-98974e0b-250.gif"> <br>
-  <img src="https://i.ibb.co/41SfNbT/tumblr-4e6bff43259b358756450291dfd88034-8cb058a7-250.gif"> <br>
-</div>
+/* blinkie bar */
+  <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif"> 
+  <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp"> 
+  <img src="https://i.ibb.co/YD6rHZ6/tumblr-a715d77e59d48068d047aa315c74ee9c-4317d530-250.gif"> 
+  <img src="https://i.ibb.co/bK1dK6W/tumblr-8cc68e9d711c282e1fb825acb3c392a1-2df65134-250.webp"> 
+  <img src="https://i.ibb.co/HtJB5wZ/tumblr-f4b6d5654f5b00911ba68028ba425fd4-fe016682-250.gif"> 
+  <img src="https://i.ibb.co/2SKJ2ZX/tumblr-fd9923a2addfe9a1baf48bf31fe6c07e-6e9a0db3-250.gif"> 
+  <img src="https://i.ibb.co/tmk3TQY/tumblr-bb74dcde3c3143d2ffdffd7bdaba0a34-f00cde6f-250.webp"> 
+  <img src="https://i.ibb.co/hm5jzHX/tumblr-e3ca1d1c6cf70bfe846ac9d614913583-a3f6cb76-250.gif"> 
+  <img src="https://i.ibb.co/8P2GtVJ/tumblr-2024cc9eedad0af2773e012d4049cb74-2668bfe9-250.gif"> 
+  <img src="https://i.ibb.co/VWYCRtV/tumblr-83e1536f228830945568acb8a61fb0ff-860423a5-250.webp"> 
+  <img src="https://i.ibb.co/6bTLmJJ/tumblr-0d81ea8177823c5d8dea7e23a7cbe756-54884833-250.webp"> 
+  <img src="https://i.ibb.co/Wc9pw0g/tumblr-0ac8d42d14c2caf2a3880d241ba5f06e-b07ed936-250.gif"> 
+  <img src="https://i.ibb.co/g4byr9H/tumblr-06d752c4a6fa49f2bab11d8419fdb9ab-69d2ce4b-250.webp"> 
+  <img src="https://i.ibb.co/0QdC6ky/tumblr-390e1cadbf4214d569c5210b7defc342-98974e0b-250.gif"> 
+  <img src="https://i.ibb.co/41SfNbT/tumblr-4e6bff43259b358756450291dfd88034-8cb058a7-250.gif"> 
+
 
       <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
