--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ tb8_pisi()
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>  
-/* blinkie bar */
+<!-- blinkie bar -->
   <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif"> 
   <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp"> 
   <img src="https://i.ibb.co/YD6rHZ6/tumblr-a715d77e59d48068d047aa315c74ee9c-4317d530-250.gif"> 
