--- a/404.html
+++ b/404.html
@@ -22,8 +22,8 @@
 </div>
     
     <div class="stuff">
-      <h2>looks like there's nothing here.</h2>
-      <p>return to <a href="index">home</a>.</p>
+      <h2 style="color:white;font-family:Arial">looks like there's nothing here.</h2>
+      <p style="color:white;font-family:Arial">return to <a href="index">home</a>.</p>
     </div>
     
   </body>
