--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@ tb8_pisi()
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>  
-<!-- blinkie bar
+<!-- blinkie bar -->
+<div class="sidebar">
   <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif"> 
   <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp"> 
   <img src="https://i.ibb.co/YD6rHZ6/tumblr-a715d77e59d48068d047aa315c74ee9c-4317d530-250.gif"> 
@@ -74,7 +75,7 @@ tb8_pisi()
   <img src="https://i.ibb.co/g4byr9H/tumblr-06d752c4a6fa49f2bab11d8419fdb9ab-69d2ce4b-250.webp"> 
   <img src="https://i.ibb.co/0QdC6ky/tumblr-390e1cadbf4214d569c5210b7defc342-98974e0b-250.gif"> 
   <img src="https://i.ibb.co/41SfNbT/tumblr-4e6bff43259b358756450291dfd88034-8cb058a7-250.gif"> 
--->
+    </div>
 
       <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
