--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ tb8_pisi()
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>  
-<!-- blinkie bar -->
+<!-- blinkies
   <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif"> 
   <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp">
   <img src="https://i.ibb.co/99FqDWp/tumblr-31771940f1143004e18f782c2fd05ada-630a7e17-250.gif">
@@ -78,9 +78,12 @@ tb8_pisi()
   <img src="https://i.ibb.co/41SfNbT/tumblr-4e6bff43259b358756450291dfd88034-8cb058a7-250.gif">
   <img src="https://i.ibb.co/yNMPBWV/tumblr-c37e985fa185c43df56a7ba066fb95e3-c81dfecc-250.gif">
   <img src="https://i.ibb.co/g4byr9H/tumblr-06d752c4a6fa49f2bab11d8419fdb9ab-69d2ce4b-250.webp"> 
-
+-->
       <div class="stuff">
-        <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide">
+        <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide"><br>
+          <img src="https://i.ibb.co/tmk3TQY/tumblr-bb74dcde3c3143d2ffdffd7bdaba0a34-f00cde6f-250.webp">
+          <img src="https://i.ibb.co/Wc9pw0g/tumblr-0ac8d42d14c2caf2a3880d241ba5f06e-b07ed936-250.gif"> 
+          <img src="https://i.ibb.co/VWYCRtV/tumblr-83e1536f228830945568acb8a61fb0ff-860423a5-250.webp"> 
         <p style="color:white;font-family:Arial">hello! hello hello hello. txt</p>
       </div>
     
