--- a/diet.html
+++ b/diet.html
@@ -17,5 +17,7 @@
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>
+    <div class="stuff">
+      <img src="https://i.imgur.com/b7zKITH.gif" alt="diet + nutrition">
   </body>
   </html>
