--- a/diet.html
+++ b/diet.html
@@ -19,5 +19,8 @@
 </div>
     <div class="stuff">
       <img src="https://i.imgur.com/b7zKITH.gif" alt="diet + nutrition">
+            <p style="color:white;font-family:Arial">rats, like all other animals, need a balanced and fortified diet to be healthy. they need their own food, and eating only
+table scraps won't be healthy for them. rats are <p style="color:red">omnivores</p>, meaning they eat both plant and animal matter. </p>
+  </body>
   </body>
   </html>
