--- a/diet.html
+++ b/diet.html
@@ -20,7 +20,7 @@
     <div class="stuff">
       <img src="https://i.imgur.com/b7zKITH.gif" alt="diet + nutrition">
             <p style="color:white;font-family:Arial">rats, like all other animals, need a balanced and fortified diet to be healthy. they need their own food, and eating only
-table scraps won't be healthy for them. rats are <span style="red">omnivores</span>, meaning they eat both plant and animal matter. </p>
+table scraps won't be healthy for them. rats are <span style="color:red">omnivores</span>, meaning they eat both plant and animal matter. </p>
   </body>
   </body>
   </html>
