--- a/diet.html
+++ b/diet.html
@@ -19,8 +19,10 @@
 </div>
     <div class="stuff">
       <img src="https://i.imgur.com/b7zKITH.gif" alt="diet + nutrition">
-            <p style="color:white;font-family:Arial">rats, like all other animals, need a balanced and fortified diet to be healthy. they need their own food, and eating only
-table scraps won't be healthy for them. rats are <span style="color:red">omnivores</span>, meaning they eat both plant and animal matter. </p>
+            <p style="color:white;font-family:Arial;text-indent: 20px;">rats, like all other animals, need a balanced and fortified diet to be healthy. they need their own food, and eating only
+      table scraps won't be healthy for them. rats are <span style="color:red">omnivores</span>, meaning they eat both plant and animal matter. a rat's weight doesn't always
+      correlate to their health; a rat can be both overweight and malnourished. diet can be a complex issue, but it doesn't have to be! while many commerical mixes or blocks
+      are unsuitable for rats, there are a few good ones out there. </p>
   </body>
   </body>
   </html>
