--- a/diet.html
+++ b/diet.html
@@ -19,10 +19,27 @@
 </div>
     <div class="stuff">
       <img src="https://i.imgur.com/b7zKITH.gif" alt="diet + nutrition">
-            <p style="color:white;font-family:Arial;text-indent: 20px;">rats, like all other animals, need a balanced and fortified diet to be healthy. they need their own food, and eating only
+      <p style="color:white;font-family:Arial;text-indent:20px;">rats, like all other animals, need a balanced and fortified diet to be healthy. they need their own food, and eating only
       table scraps won't be healthy for them. rats are <span style="color:red">omnivores</span>, meaning they eat both plant and animal matter. a rat's weight doesn't always
       correlate to their health; a rat can be both overweight and malnourished. diet can be a complex issue, but it doesn't have to be! while many commerical mixes or blocks
-      are unsuitable for rats, there are a few good ones out there. </p>
-  </body>
+      are unsuitable for rats, there are a few good ones out there.</p>
+      <h3 style="color:white;font-family:Arial;text-indent:20px;">the basics</h3>
+      <p style="color:white;font-family:Arial;text-indent:20px;">not all diets are made equal. each diet is
+        composed of different ingredients, nutritional contents, etc. a good rat diet is one that is nutritionally
+        complete and fufills all of their needs. your rat relies on their diet for their growth and health, so
+        it makes sense that what you choose is important. there are two main "kinds" of diets: lab blocks (may
+        also be called pellets) and mixes. blocks are pellets that contain different ingredients and minerals.
+        lab blocks help keep teeth in shape and prevents selective feeding. however, lab blocks can get expensive
+        depending on how many rats you have. they also don't allow for changes that need to be made nutritionally.
+        mixes are self-explanatory. by mixing ingredients together, you can tune it to the nutritional needs of your
+        rats. mixes are very cheap and can be good if you know what you're doing. if there's a mineral or vitamin
+        missing from your mix, you can add it. mixes are weak to selective feeding, but you can deal with this with
+        how you feed your mixes. if your rats don't eat a certain part of the mix, they're missing something
+        nutritonally.<br>
+        lab blocks are more popular in the US, while mixes are more popular in the EU and other parts of the world.
+        if you live in a place where lab blocks aren't available, mixes will be your best bet! while lab blocks are
+        usually more popular, you can still find blocks that aren't nutritionally complete. most commercial mixes
+        are also unsuitable (especially seed mixes).
+  </div>
   </body>
   </html>
