--- a/diet.html
+++ b/diet.html
@@ -41,7 +41,7 @@
         usually more popular, you can still find blocks that aren't nutritionally complete. most commercial mixes
         are also unsuitable (especially seed mixes).</p>
       <h2 style="color:white;font-family:Arial">a good diet vs a bad diet</h2>
-      <table>
+      <table style="color:white;font-family:Arial">
         <tr>
           <th>good lab block</th>
           <th>bad lab block</th>
