--- a/diet.html
+++ b/diet.html
@@ -47,7 +47,7 @@
           <th>bad lab block</th>
         </tr>
         <tr>
-          <td>protein content of 12/13-16% (up to 18% for breeding does)</td>
+          <td>protein content of 12/13-16%*</td>
           <td>too high or too low protein-wise</td>
         </tr>
         <tr>
@@ -55,9 +55,19 @@
           <td>fat is too high or too low</td>
         </tr>
         <tr>
-          <td>marketed towards rats specifically*</td>
+          <td>marketed towards rats specifically**</td>
           <td>marketed towards other small animals, like hamsters</td>
         </tr>
+        <tr>
+          <td>high quality ingredients</td>
+          <td>low quality ingredients, or components like hay</td>
+        </tr>
+        <p style="color:grey;font-family:Arial;font-size:10px;">
+        * harleys (a variety of rat) should have less than 15% protein, and breeding does can
+        have up up to 18% protein.<br>
+        ** most rat foods are marketed to both rats and mice. however, they're only good for
+        one, since mice have different nutritional needs. avoid general small animal food
+        mixes.</p>
   </div>
   </body>
   </html>
