--- a/diet.html
+++ b/diet.html
@@ -62,6 +62,7 @@
           <td>high quality ingredients</td>
           <td>low quality ingredients, or components like hay</td>
         </tr>
+      </table>
         <p style="color:grey;font-family:Arial;font-size:10px;">
         * harleys (a variety of rat) should have less than 15% protein, and breeding does can
         have up up to 18% protein.<br>
