--- a/diet.html
+++ b/diet.html
@@ -52,7 +52,7 @@
         </tr>
         <tr>
           <td>fat content of 4-6%</td>
-          <td>fat is too high or too low</td>
+          <td>fat content is too high</td>
         </tr>
         <tr>
           <td>marketed towards rats specifically**</td>
@@ -69,6 +69,15 @@
         ** most rat foods are marketed to both rats and mice. however, they're only good for
         one, since mice have different nutritional needs. avoid general small animal food
         mixes.</p>
+      <p style="color:white;font-family:Arial;text-indent:40px;">rats do best with a protein content of 12 percent
+      to 16 percent (this may vary depending on a few factors). rats also do best with a fat content of 4 percent
+      to 6 percent. something that's very important is quality of the ingredients used. here's a list of ingredients
+      to avoid:</p>
+      <ul style="color:white;font-family:Arial;">
+    <li>bonemeal, wheatmeal, wheatfeed</li>
+    <li>any sort of hay, as it cannot be digested and therefore offers no nutrients</li>
+    <li>vague ingredients that aren't fully listed on the bag or manufactorer website</li>
+      </ul>
   </div>
   </body>
   </html>
