--- a/diet.html
+++ b/diet.html
@@ -76,7 +76,7 @@
       <ul style="color:white;font-family:Arial;">
     <li>bonemeal, wheatmeal, wheatfeed</li>
     <li>any sort of hay, as it cannot be digested and therefore offers no nutrients</li>
-    <li>vague ingredients that aren't fully listed on the bag or manufactorer website</li>
+    <li>vague ingredients that aren't fully listed on the bag or manufacturer website</li>
       </ul>
   </div>
   </body>
