--- a/diet.html
+++ b/diet.html
@@ -21,12 +21,12 @@
       <img src="https://i.imgur.com/b7zKITH.gif" alt="diet + nutrition">
       <p style="color:white;font-family:Arial;text-indent:40px;">rats, like all other animals, need a balanced and fortified diet to be healthy. they need their own food, and eating only
       table scraps won't be healthy for them. rats are <span style="color:red">omnivores</span>, meaning they eat both plant and animal matter. a rat's weight doesn't always
-      correlate to their health; a rat can be both overweight and malnourished. diet can be a complex issue, but it doesn't have to be! while many commerical mixes or blocks
+      correlate to their health; a rat can be both overweight and malnourished. diet can be a complex issue, but it doesn't have to be! while many commercial mixes or blocks
       are unsuitable for rats, there are a few good ones out there.</p>
       <h2 style="color:white;font-family:Arial">the basics</h2>
       <p style="color:white;font-family:Arial;text-indent:40px;">not all diets are made equal. each diet is
         composed of different ingredients, nutritional contents, etc. a good rat diet is one that is nutritionally
-        complete and fufills all of their needs. your rat relies on their diet for their growth and health, so
+        complete and fulfills all of their needs. your rat relies on their diet for their growth and health, so
         it makes sense that what you choose is important. there are two main "kinds" of diets: lab blocks (may
         also be called pellets) and mixes. blocks are pellets that contain different ingredients and minerals.
         lab blocks help keep teeth in shape and prevents selective feeding. however, lab blocks can get expensive
@@ -35,7 +35,7 @@
         rats. mixes are very cheap and can be good if you know what you're doing. if there's a mineral or vitamin
         missing from your mix, you can add it. mixes are weak to selective feeding, but you can deal with this with
         how you feed your mixes. if your rats don't eat a certain part of the mix, they're missing something
-        nutritonally.
+        nutritionally.
       <p style="color:white;font-family:Arial;text-indent:40px;">lab blocks are more popular in the US, while mixes are more popular in the EU and other parts of the world.
         if you live in a place where lab blocks aren't available, mixes will be your best bet! while lab blocks are
         usually more popular, you can still find blocks that aren't nutritionally complete. most commercial mixes
@@ -65,7 +65,7 @@
       </table>
         <p style="color:grey;font-family:Arial;font-size:10px;">
         * harleys (a variety of rat) should have less than 15% protein, and breeding does can
-        have up up to 18% protein.<br>
+        have up to 18% protein.<br>
         ** most rat foods are marketed to both rats and mice. however, they're only good for
         one, since mice have different nutritional needs. avoid general small animal food
         mixes.</p>
@@ -74,7 +74,7 @@
       to 6 percent. something that's very important is quality of the ingredients used. here's a list of ingredients
       to avoid:</p>
       <ul style="color:white;font-family:Arial;">
-    <li>bonemeal, wheatmeal, wheatfeed</li>
+    <li>bonemeal, wheatmeal, wheat feed</li>
     <li>any sort of hay, as it cannot be digested and therefore offers no nutrients</li>
     <li>vague ingredients that aren't fully listed on the bag or manufacturer website</li>
       </ul>
