--- a/diet.html
+++ b/diet.html
@@ -77,7 +77,24 @@
     <li>bonemeal, wheatmeal, wheat feed</li>
     <li>any sort of hay, as it cannot be digested and therefore offers no nutrients</li>
     <li>vague ingredients that aren't fully listed on the bag or manufacturer website</li>
+    <li><i>dried</i> corn → US only. the US and the EU have different standards when it comes to dried corn. in the US, dried corn
+    has higher amounts of toxins that can cause liver damage. like all foods, moderation is key.</li>
       </ul>
+      <h2 style="color:white;font-family:Arial">treats, supplements, and additional foods</h2>
+      <p style="color:white;font-family:Arial;text-indent:40px;">treats are a good way to develop a bond with your rats. however, some treats are unhealthy or
+        even dangerous, especially in high amounts. other than treats, some people like to give their rats extra food in addition to their diet. some also
+        give their rats vitamins and extra supplements. this isn't always bad, but most of the time, it just isn't needed! when you're feeding a nutritionally
+        complete block or mix, vitamins aren't needed.</p>
   </div>
   </body>
   </html>
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
