--- a/diet.html
+++ b/diet.html
@@ -84,7 +84,15 @@
       <p style="color:white;font-family:Arial;text-indent:40px;">treats are a good way to develop a bond with your rats. however, some treats are unhealthy or
         even dangerous, especially in high amounts. other than treats, some people like to give their rats extra food in addition to their diet. some also
         give their rats vitamins and extra supplements. this isn't always bad, but most of the time, it just isn't needed! when you're feeding a nutritionally
-        complete block or mix, vitamins aren't needed.</p>
+        complete block or mix, vitamins aren't needed. in fact, most vitamins marketed towards rats are unnecessary. <i>never</i> contaminate the only water
+        source in the cage with vitamins. rats should always have access to clean drinking water.</p>
+      <h2 style="color:white;font-family:Arial">water bowls vs water bottles</h2>
+      <p style="color:white;font-family:Arial;text-indent:40px;">rats should always have access to water, and many owners do this via water bottles or bowls. which
+        is better though? it all depends on your rats! some rats prefer bowls because they can use their hands to drink water. however, bowls can be pushed around
+        easily, and can get pretty unhygenic. rats like to pee in water bowls, and they can fill up with bacteria fast. water bowls should be refilled and changed
+        at least once a day. the best bowls are ones that attach to the bars of the cage. water bottles are pretty hygenic, and get messy only when they leak. it's up
+        to you to decide which to use. when you use water bottles, make them high! rats should have to stretch to drink. sitting and drinking can prop their head at
+        a weird angle that can strain them. </p>
   </div>
   </body>
   </html>
