--- a/housing.html
+++ b/housing.html
@@ -18,4 +18,4 @@
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>
     <div class="stuff">
-      <img src="https://imgur.com/AziICGI" alt="cage + homing">
+      <img src="https://i.imgur.com/AziICGI.gif" alt="cage + homing">
