--- a/index.html
+++ b/index.html
@@ -45,10 +45,29 @@ tb8_TID = setTimeout("tb8_pisi()", tb8_sp);
 }
 tb8_pisi()
 </script>
-    
   </head>
-  
   <body>
+   <!-- floaties -->
+  <marquee behavior=scroll direction=down scrollamount=3 scrolldelay=19 height=695 style='position:absolute; left:77%; top:28px; width:100; height:695px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=37 height=628 style='position:absolute; left:89%; top:69px; width:100; height:628px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=5 scrolldelay=8 height=609 style='position:absolute; left:24%; top:109px; width:100; height:609px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=32 height=606 style='position:absolute; left:80%; top:164px; width:100; height:606px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=15 height=559 style='position:absolute; left:24%; top:186px; width:100; height:559px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=2 scrolldelay=11 height=588 style='position:absolute; left:62%; top:50px; width:100; height:588px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=2 scrolldelay=29 height=533 style='position:absolute; left:79%; top:154px; width:100; height:533px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=47 height=663 style='position:absolute; left:26%; top:190px; width:100; height:663px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=41 height=648 style='position:absolute; left:55%; top:191px; width:100; height:648px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=46 height=549 style='position:absolute; left:24%; top:197px; width:100; height:549px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=13 height=626 style='position:absolute; left:83%; top:161px; width:100; height:626px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=5 scrolldelay=20 height=532 style='position:absolute; left:8%; top:66px; width:100; height:532px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=4 scrolldelay=32 height=532 style='position:absolute; left:83%; top:198px; width:100; height:532px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=5 scrolldelay=8 height=544 style='position:absolute; left:46%; top:145px; width:100; height:544px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=50 height=514 style='position:absolute; left:8%; top:105px; width:100; height:514px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=6 scrolldelay=23 height=572 style='position:absolute; left:52%; top:40px; width:100; height:572px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=2 scrolldelay=44 height=574 style='position:absolute; left:49%; top:170px; width:100; height:574px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=3 scrolldelay=24 height=688 style='position:absolute; left:25%; top:80px; width:100; height:688px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=6 scrolldelay=26 height=578 style='position:absolute; left:72%; top:200px; width:100; height:578px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
+<marquee behavior=scroll direction=down scrollamount=1 scrolldelay=5 height=530 style='position:absolute; left:17%; top:55px; width:100; height:530px;'><font><img src="https://64.media.tumblr.com/d1560694d1ad78af86f8da6e7292f21e/tumblr_inline_p94wgsxV2C1rhwzwl_75sq.gifv"></font></marquee>
 <div class="sidenav">
   <a href="index"><img src="http://www.mazeguy.net/office/pushpin.gif"> home <img src="https://imgur.com/ci0w4O6.gif"></a>
   <a href="diet"><img src="http://www.mazeguy.net/edible/cheese.gif"> food + nutrition</a>
@@ -61,35 +80,13 @@ tb8_pisi()
   <a href="sitemap"><img src="https://www.mazeguy.net/objects/wrench.gif"> site navigation</a>
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
-</div>  
-<!-- blinkies
-  <img src="https://i.ibb.co/dgrdb8G/tumblr-f57bea70c075bf50a4f0f55bd81cb687-5bc3a161-250.gif"> 
-  <img src="https://i.ibb.co/mDCMRmQ/tumblr-52768062493f4605f4ea5823e5c267af-7f14d2fd-250.webp">
-  <img src="https://i.ibb.co/99FqDWp/tumblr-31771940f1143004e18f782c2fd05ada-630a7e17-250.gif">
-  <img src="https://i.ibb.co/YD6rHZ6/tumblr-a715d77e59d48068d047aa315c74ee9c-4317d530-250.gif"> 
-  <img src="https://i.ibb.co/bK1dK6W/tumblr-8cc68e9d711c282e1fb825acb3c392a1-2df65134-250.webp">
-  <img src="https://i.ibb.co/7yXVQ3d/tumblr-06041a2d17e1ff1e022dab0abb8d5459-4225ed0e-250.gif">
-  <img src="https://i.ibb.co/HtJB5wZ/tumblr-f4b6d5654f5b00911ba68028ba425fd4-fe016682-250.gif"> 
-  <img src="https://i.ibb.co/2SKJ2ZX/tumblr-fd9923a2addfe9a1baf48bf31fe6c07e-6e9a0db3-250.gif">
-  <img src="https://i.ibb.co/Lp31Sj1/tumblr-5c44b9fa12f649cd692a8bdf9295b36e-d209c80d-250.gif">
-  <img src="https://i.ibb.co/tmk3TQY/tumblr-bb74dcde3c3143d2ffdffd7bdaba0a34-f00cde6f-250.webp"> 
-  <img src="https://i.ibb.co/hm5jzHX/tumblr-e3ca1d1c6cf70bfe846ac9d614913583-a3f6cb76-250.gif"> 
-  <img src="https://i.ibb.co/8P2GtVJ/tumblr-2024cc9eedad0af2773e012d4049cb74-2668bfe9-250.gif"> 
-  <img src="https://i.ibb.co/VWYCRtV/tumblr-83e1536f228830945568acb8a61fb0ff-860423a5-250.webp"> 
-  <img src="https://i.ibb.co/6bTLmJJ/tumblr-0d81ea8177823c5d8dea7e23a7cbe756-54884833-250.webp"> 
-  <img src="https://i.ibb.co/Wc9pw0g/tumblr-0ac8d42d14c2caf2a3880d241ba5f06e-b07ed936-250.gif"> 
-  <img src="https://i.ibb.co/0QdC6ky/tumblr-390e1cadbf4214d569c5210b7defc342-98974e0b-250.gif"> 
-  <img src="https://i.ibb.co/41SfNbT/tumblr-4e6bff43259b358756450291dfd88034-8cb058a7-250.gif">
-  <img src="https://i.ibb.co/yNMPBWV/tumblr-c37e985fa185c43df56a7ba066fb95e3-c81dfecc-250.gif">
-  <img src="https://i.ibb.co/g4byr9H/tumblr-06d752c4a6fa49f2bab11d8419fdb9ab-69d2ce4b-250.webp"> 
--->
+</div>
       <div class="stuff">
         <img src="https://imgur.com/GbJwx9R.gif" alt="morbid's rat care guide"><br>
           <img src="https://i.ibb.co/tmk3TQY/tumblr-bb74dcde3c3143d2ffdffd7bdaba0a34-f00cde6f-250.webp">
           <img src="https://i.ibb.co/Wc9pw0g/tumblr-0ac8d42d14c2caf2a3880d241ba5f06e-b07ed936-250.gif"> 
           <img src="https://i.ibb.co/VWYCRtV/tumblr-83e1536f228830945568acb8a61fb0ff-860423a5-250.webp"> 
         <p style="color:white;font-family:Arial">hello! hello hello hello. txt</p>
-      </div>
-    
+      </div>  
   </body>
 </html>
