--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@ tb8_pisi()
           <img src="https://i.ibb.co/tmk3TQY/tumblr-bb74dcde3c3143d2ffdffd7bdaba0a34-f00cde6f-250.webp">
           <img src="https://i.ibb.co/Wc9pw0g/tumblr-0ac8d42d14c2caf2a3880d241ba5f06e-b07ed936-250.gif"> 
           <img src="https://i.ibb.co/VWYCRtV/tumblr-83e1536f228830945568acb8a61fb0ff-860423a5-250.webp"> 
-        <p style="color:white;font-family:Arial">hello! hello hello hello. txt</p>
+        <p style="color:white;font-family:Arial">hello! this site is a collection of up to date studies, resources, and info on proper rat care! pet rats (rattus norvegicus)
+        have been kept as early as the 1800s, and care changes drastically every few decades! in the 80s and 90s, it was very common for people to keep rats alone, in tanks,
+        with poor bedding. a lot of people fed rats table scraps as a main diet! thankfully, we have lots of scientific evidence that can help us make the best choices for
+        our pets.</p>
       </div>  
   </body>
 </html>
