--- a/rdiet.html
+++ b/rdiet.html
@@ -20,7 +20,11 @@
 </div>
     <div class="stuff">
       <img src="https://i.imgur.com/b7zKITH.gif" alt="diet + nutrition">
-      <h4>recommended + unrecommended diets</h4>
+      <h1 style="color:white;font-family:Arial">→ recommended + unrecommended diets</h4>
+      <p style="color:white;font-family:Arial;text-indent:40px;">all rats should have access to a fortified diet that meets all of their nutritional needs. some diets are good,
+        some okay, and some may be dangerous. here's a list of foods to buy, and a list of foods to stay away from.</p>
+      <h2 style="color:white;font-family:Arial">recommended diets</h2>
+      <h3 style="color:#00d3ff;font-family:Arial">oxbow essentials - adult rat food</h3>
     </div>
   </body>
   </html>
