--- a/diet.html
+++ b/diet.html
@@ -84,7 +84,8 @@
       <p style="color:white;font-family:Arial;text-indent:40px;">treats are a good way to develop a bond with your rats. however, some treats are unhealthy or
         even dangerous, especially in high amounts. other than treats, some people like to give their rats extra food in addition to their diet. some also
         give their rats vitamins and extra supplements. this isn't always bad, but most of the time, it just isn't needed! when you're feeding a nutritionally
-        complete block or mix, vitamins aren't needed. in fact, most vitamins marketed towards rats are unnecessary. <i>never</i> contaminate the only water
+        complete block or mix, you don't need vitamins. in fact, most vitamins marketed towards rats are unnecessary, and you should only give your rats vitamins or
+        supplements if you're sure they need them. <i>never</i> contaminate the only water
         source in the cage with vitamins. rats should always have access to clean drinking water.</p>
       <h2 style="color:white;font-family:Arial">water bowls vs water bottles</h2>
       <p style="color:white;font-family:Arial;text-indent:40px;">rats should always have access to water, and many owners do this via water bottles or bowls. which
