--- a/404.html
+++ b/404.html
@@ -17,6 +17,7 @@
   <a href="enrichment"><img src="http://www.mazeguy.net/objects/palette.gif"> enrichment</a>
   <a href="behavior"><img src="http://www.mazeguy.net/office/envelope.gif"> behavior</a>
   <a href="breeding"><img src="http://www.mazeguy.net/romantic/candyheart.gif"> breeding</a>
+  <a href="sitemap"><img src="https://www.mazeguy.net/objects/wrench.gif"> site navigation</a>
   <a href="resources"><img src="http://www.mazeguy.net/office/trash.gif"> resources</a>
   <a href="contact"><img src="http://www.mazeguy.net/office/computer.gif"> contact</a>
 </div>
